
Changes in Version 0.9-43

  o workaround for problem of spurious arguments appearing in second
    and subsequent calls to latticistCompose() (a bug in R < 2.9).

  o fixed sample size reporting for table objects.

  o better estimate of number of points for splom and parallel,
    resulting in more appropriate plot parameters (e.g. pch, alpha).

  o playwith GUI: older versions of GTK+ failed on 'tooltip-text'.

  o added a CITATION file.

Changes in Version 0.9-42

  o added some vignettes, replacing the previous demos.

  o smart label positioning for mosaic plots.

  o use residual-based shading by default in mosaic plots.

  o changed the default style (see ?latticist.options),
    and improved automatic titles for some plots.

Changes in Version 0.9-41

  o fixed bug in latticist(use.playwith = TRUE), which failed
    when a custom entry was typed into a variable field.

  o changed graphics device initialisation in the gWidgets
    version of latticist, so it works now with JavaGD.

  o generalised the method for color-covariates used with
    cloud and parallel, to handle multiple panels (subscripts).
    Also, splom and stripplot now handle color-covariates too.

  o style settings (and more) can be set with latticist.options.

  o better help for ?latticistCompose and ?latticist.options.

  o added some demos.

Changes in Version 0.9-40

  o split Latticist out from 'playwith' into a new package.

  o latticist() is now a general interface, which can launch
    either a playwith-based GUI or a gWidgets-based GUI.

  o Latticist now supports table objects.

  o use package 'vcd' to produce a mosaic plot when
    two or more categorical variables are plotted.

  o code simplified; function latticistParse() defunct.
